# ServerOnlineMessenger

./: CMakeLists.txt  main.cpp  readme.md
server/: server.cpp  server.h  serverUtils.cpp  serverUtils.h
sql/: database.cpp  database.h
sql/dto/: logDto.cpp  logDto.h  userDto.cpp  userDto.h
sql/tables/: log.cpp  log.h  user.cpp  user.h
utils/: passwordUtils.cpp  passwordUtils.h
